{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2978ec46-20c8-42ec-b347-f70f7ddc5d20",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "85158c46-449c-43b2-ac58-1384eba9b2cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "708a365e-89b2-45c8-9d82-0e2ce40dfaba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a7ef068-03eb-472d-a5f6-01113cf82694",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a11d1db1-6d95-4a30-ba03-85e69b73e994",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29076a0f-6b50-4b6d-876b-0fade2e5a23f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c4eb40a-424a-4543-b260-44dcfe0b6300",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}